# xstaradventures

./: AGENTS.md  CLAUDE.md  COMMANDS.md  Cargo.toml
.claude/: settings.local.json
docs/: bevy-architecture.md  bootstrap.md  controls.md  crisis-escalation.md  design.md  factions.md  first-thirty-minutes.md  fleet-ai.md  fleet-roles.md  mvp.md  narrative.md  one-page-mvp.md  opening-narration.md  pirate-escalation-ai-doctrine.md  pirates-bosses.md  player-ship-late-game.md  run-ending.md  ship-fleets.md  station-lifecycle.md  stations.md  ui-delegation.md  world-structure.md  zone-modifiers.md
saves/: sector.ron
src/: compat.rs  factions.rs  fleets.rs  main.rs  ore.rs  pirates.rs  ships.rs  stations.rs  world.rs
src/plugins/: core.rs  mod.rs  orders.rs  player.rs  render2d.rs  saveload.rs  sim.rs  ui.rs  worldgen.rs
src/plugins/player/: autopilot.rs  components.rs  docking.rs  gates.rs  interactions.rs  mod.rs  movement.rs  targeting.rs
src/plugins/render2d/: camera.rs  components.rs  debug.rs  effects.rs  entities.rs  map.rs  mod.rs  starfield.rs
src/plugins/sim/: boundary.rs  intel.rs  mod.rs  ore.rs  pirates.rs  scouts.rs  ships.rs  stations.rs
src/plugins/ui/: components.rs  contacts.rs  debug.rs  docking.rs  fleet.rs  hud.rs  intel.rs  log.rs  map_panels.rs  mod.rs  panel.rs
