[package]
name = "xstaradventures"
version = "0.1.0"
edition = "2021"

authors = ["XStar Adventures Contributors"]
description = "System-first space sandbox built with Bevy."
license = "UNLICENSED"

[dependencies]
bevy = "0.13"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
cargo-llvm-cov = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
